--- a/Readme
+++ b/Readme
@@ -1,8 +1,1 @@
-- 👋 Hi, I’m @naveen07kumar
-- 👀 I’m interested in ...java.
-- 🌱 I’m currently learning ...3rd year  b.tech it
-
-<!---
-naveen07kumar/naveen07kumar is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+FRONT END 
